# ChangeLog for gentoo-src/stager
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.11 2003/10/08 04:29:09 zhen Exp $

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/build_functions.sh:
  I outsourced all of the build functions to include/build_functions.sh. In the
  future, this will happen more - the code needs cleaned up.

  07 Oct 2003; zhen <zhen@gentoo.org> catalyst, bin/bootstrap.sh, bin/stage1:
  I mucked with stage1 and bootstrap.sh to add support for ${BUILDTYPE} (profile
  transparency). Also, I removed gettext from bootstrap, since mainline gentoo
  does not use that anymore.

  05 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  since we now have a default profile in portage, i massaged some errors
  messages to reflect that.

  04 Oct 2003; zhen <zhen@gentoo.org> catalyst, bin/bootstrap.sh, bin/stage1:
  removed ccache support from catalyst stage1 build cause it breaks the build.
  Additionally, I removed gettext support from bootstrap, because according to
  our new default profile, we don't use that anymore.

  02 Oct 2003; zhen <zhen@gentoo.org> catalyst, files/catalyst.conf:
  added a new var, BUILDTYPE, adding more transparency for building.
  In the future, we will be building both selinux and hardened sources.

  02 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  fixed some formatting when catalyst prints out build info, additionally,
  trying to make catalyst more transparent for future expansion of stages

  21 Sep 2003; <zhen@gentoo.org> catalyst:
  fixed the order/ way in which we handle cmd line arguments wrt to -h or
  --help. I moved this functionality from the main program section to
  prechecks().

  21 Sep 2003; <zhen@gentoo.org> README.catalyst, catalyst:
  I edited catalyst to change our naming convention from stage*-arch-h.* to
  stage*-arch-etdyn-ssp.* re method's request. This will not be the first time