@@ -1,0 +1,50 @@
+metalog
+ncftp
+sys-apps/pciutils 
+#net-www/lynx
+links
+grub
+lilo
+parted
+app-arch/mt-st
+sys-apps/star
+dev-util/strace
+sys-apps/pciutils
+net-dialup/wvdial
+sys-apps/raidtools
+net-fs/nfs-utils
+net-irc/irssi
+jfsutils
+speedtouch
+gpm
+dosfstools
+vim
+xfsprogs
+sys-apps/e2fsprogs 
+sys-apps/reiserfs-utils 
+sys-apps/hdparm 
+app-editors/nano
+sys-apps/less
+net-misc/openssh 
+net-misc/dhcpcd 
+mingetty
+pwgen
+dietlibc
+popt
+dialog
+=sys-apps/modutils-2.4.25
+fxload
+=sys-apps/hotplug-20020826-r2
+screen
+^mirrorselect
+^gs-sources
+^iputils
+^kudzu
+^=sys-apps/hwdata-knoppix-0.8
+^hwsetup
+^bootsplash
+^=sys-apps/baselayout-1.8.6.8-r1
+^sys-apps/mdadm
+^net-ftp/ftpd
+^=sys-apps/evms-1.2.1-r1
+^sys-apps/partimage
