@@ -1,0 +1,14 @@
+net-misc/nforce-net
+emu10k1
+net-wireless/wireless-tools
+sys-apps/iproute
+sys-apps/pcmcia-cs
+linux-wlan-ng
+net-dialup/ppp
+net-dialup/rp-pppoe
+isdn4k-utils
+kpnadsl4linux
+pptpclient
+sys-apps/lvm-user
+^rp-l2tp
+^usbutils
