@@ -1,0 +1,26 @@
+SNAPBALL=/path/to/foo.tar.bz2
+STORAGE_MODULES="aic79xx aic7xxx aic7xxx_old BusLogic \
+ncr53c8xx NCR53c406a \
+initio advansys  aha1740  aha1542  aha152x  \
+atp870u dtc eata fdomain gdth \
+megaraid pas16 pci2220i pci2000 psi240i \
+qlogicfas qlogicfc qlogicisp \
+seagate t128  tmscsim  u14-34f  ultrastor  wd7000  \
+a100u2w 3w-xxxx DAC960 NCR53c406a \
+aacraid sym53c8xx a100u2w cpqfc \
+dmx3191d dpt_i2o imm in2000 ips qla1280 \
+sim710 sym53c416"
+FIREWIRE_MODULES="ieee1394 ohci1394 eth1394 sbp2"
+ATARAID_MODULES="ataraid pdcraid hptraid silraid"
+PCMCIA_MODULES="pcmcia_core i82365  ds ide-cs"
+USB_MODULES="usbcore ehci-hcd uhci usb-ohci hid usb-storage"
+LOOP_SIZE="210000"
+KERNCONFIG=gss-config
+CD_HOSTNAME="cdimage"
+CD_PORTDIR="/usr/portage"
+CD_ISONAME="gentoo.iso"
+BOOTSPLASH=yes
+USE="fbcon -cdr -wavelan pcmcia -gnome -dvd gpm -lirc crypt ipv6 -doc -slang \
+-X -gtk -svga -directfb -ggi -esd -nas -ggi socks5 usb -python -truetype \
+prebuilt -cups -gtk2"
+
