@@ -1,6 +1,16 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.11 2003/10/08 04:29:09 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.12 2003/10/08 19:21:01 zhen Exp $
+
+  08 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/functions.sh,
+  livecd/foundations/x86-basic/base.pkg,
+  livecd/foundations/x86-basic/kern.pkg,
+  livecd/foundations/x86-basic/post-clean.sh,
+  livecd/foundations/x86-basic/pre-clean.sh,
+  livecd/foundations/x86-basic/settings:
+  I outsourced more functions to include/functions.sh. I made it a seperate file
+  from build_fucntions.sh so that we can keep our build and other functions
+  apart. I also added in the livecd stuffs from the stager side of things.
 
   08 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/build_functions.sh:
   I outsourced all of the build functions to include/build_functions.sh. In the
